--- a/app/elements/login-page-password/login-page-password.html
+++ b/app/elements/login-page-password/login-page-password.html
@@ -36,7 +36,19 @@ paper-material > div:first-child {
 	height: 15%;
 	max-height: 248px;
 	padding: 10%;
-	background: #424b4b;
+	padding-bottom: 0;
+	background: #373b50;
+	color: white;
+
+	@apply(--layout-horizontal);
+	@apply(--layout-center);
+}
+
+paper-material > div.email {
+	height: auto;
+	padding: 0;
+	padding-bottom: 5%;
+	background: #373b50;
 	color: white;
 
 	@apply(--layout-horizontal);
@@ -45,6 +57,15 @@ paper-material > div:first-child {
 
 paper-material > div:first-child > div {
 	width: 100%;
+
+	@apply(--layout-vertical);
+	@apply(--layout-center);
+}
+
+paper-material > div.email > div {
+	width: 100%;
+	align: center;
+	font-size: 120%;
 
 	@apply(--layout-vertical);
 	@apply(--layout-center);
@@ -70,8 +91,13 @@ paper-icon-button {
 					<iron-icon class="huge" icon="account-circle"></iron-icon>
 				</div>
 			</div>
+			<div class="email">
+				<div>
+					<p>{{email}}</p>
+				</div>
+			</div>
 			<div>
-				<paper-input id="passwordInput" type="password" label="Password" value="{{password}}" autofocus="true"></paper-input>
+				<paper-input id="passwordInput" type="password" label="Password" value="{{password}}" autofocus="true" on-keydown="onKeydown"></paper-input>
 				<paper-button flat colorful on-click="next">Next</paper-button>
 			</div>
 		</paper-material>
@@ -87,6 +113,11 @@ Polymer({
 		password: {
 			type: String,
 			notify: true
+		},
+		email: {
+			type: String,
+			notify: true,
+			reflectToAttribute: true
 		}
 	},
 	next: function() {
@@ -94,6 +125,11 @@ Polymer({
 	},
 	prev: function() {
 		this.fire('prev');
+	},
+	onKeydown: function(e) {
+		if (e.keyCode === 13) {
+			this.fire('next');
+		}
 	}
 });
 </script>
