--- a/app/elements/login-page-u2f/login-page-u2f.html
+++ b/app/elements/login-page-u2f/login-page-u2f.html
@@ -35,7 +35,7 @@ paper-material > div:first-child {
 	height: 15%;
 	max-height: 248px;
 	padding: 10%;
-	background: #424b4b;
+	background: #373b50;
 	color: white;
 
 	@apply(--layout-horizontal);
