user profile and initial user challenge detail

--- a/app/elements/challenge/challenge-detail.html
+++ b/app/elements/challenge/challenge-detail.html
@@ -1,6 +1,6 @@
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
-<link rel="import" href="../task/task-card.html">
-<link rel="import" href="../skill/skill-polygon.html">
+<link rel="import" href="/elements/task/task-card.html">
+<link rel="import" href="/elements/skill/skill-polygon.html">
 
 <dom-module id="challenge-detail">
 	<style>
