--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -20,3 +20,6 @@
 
 <!-- Routing -->
 <link rel="import" href="routing.html">
+
+<!-- TODO(victorbalan): investigate why this element cause the flickering -->
+<link rel="import" href="/elements/skill/skill-list.html">
