--- a/app/elements/candidates/candidate-card.html
+++ b/app/elements/candidates/candidate-card.html
@@ -50,7 +50,7 @@
 		}
 	</style>
 	<template>
-		<paper-material elevation="1">
+		<paper-material elevation="1" on-click="onClick">
 			<div class="cardTop" align="center">
 				<div class="cardTopImage">
 					 <text class="letter" x="0" y="0">{{getInitialLetter(user)}}</text>
@@ -90,6 +90,9 @@
 			},
 			getInitialLetter: function(user) {
 				return (user.Name || user.Address).charAt(0).toUpperCase();
+			},
+			onClick: function(){
+				page.redirect('/user/' + this.user.Key);
 			}
 		});
 	</script>
