--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -83,6 +83,26 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
+	page('/user/:userKey', function(context){
+		checkAuthorization();
+		checkIsCompany();
+		app.header = 'Profile';
+		app.route = 'user';
+		Polymer.Base.importHref('/elements/user/user-detail.html', function(){
+			app.$.userDetail.getData(context.params.userKey);
+		});
+	});
+
+	page('/user/:userKey/challenge/:challengeKey', function(context){
+		checkAuthorization();
+		checkIsCompany();
+		app.header = 'Challenge detail';
+		app.route = 'userChallenge';
+		Polymer.Base.importHref('/elements/user/challenge/user-challenge-detail.html', function(){
+			app.$.userChallengeDetail.getData(context.params.userKey, context.params.challengeKey);
+		});
+	});
+
 	page('/login', function() {
 		if (hasAuthorization()) {
 			if (localStorage.company) {
