Fix a few quirks in formatting and syntax

--- a/app/elements/candidates/candidate-card.html
+++ b/app/elements/candidates/candidate-card.html
@@ -53,7 +53,7 @@
 		<paper-material elevation="1">
 			<div class="cardTop" align="center">
 				<div class="cardTopImage">
-					 <text class="letter" x="0" y="0" class="letter">{{getInitialLetter(user)}}</text>
+					 <text class="letter" x="0" y="0">{{getInitialLetter(user)}}</text>
 				</div>
 				<div class="cardTopTitle">
 					<p>{{getTitle(user)}}</p>
