--- a/app/elements/code-editor/consoles/simple-console.html
+++ b/app/elements/code-editor/consoles/simple-console.html
@@ -21,7 +21,7 @@
 		<general-console id="generalConsole">
 			<iron-autogrow-textarea id="output" readonly>
 			</iron-autogrow-textarea>
-		</general-general>
+		</general-console>
 	</template>
 	<script>
 		Polymer({
