--- a/app/elements/submission/tasks/task-timeout.html
+++ b/app/elements/submission/tasks/task-timeout.html
@@ -9,7 +9,7 @@
 		<paper-material elevation="1">
 			<div class="flex">
 				<h2>Time over!</h2>
-				<p>The last run you submited will be your final one for this task.<p>
+				<p>The last run you submited will be your final one for this task.</p>
 				<content></content>
 			</div>
 		</paper-material>
