--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body unresolved class="fullbleed layout vertical" class="fullHeight">
+<body unresolved class="fullbleed layout vertical fullHeight">
 <span id="browser-sync-binding"></span>
 	<template is="dom-bind" id="app" class="fullHeight">
 	<iron-ajax
@@ -139,7 +139,6 @@
 			</iron-pages>
 		</div>
 	</paper-header-panel>
-	</paper-drawer-panel>
 
 	<!-- TODO(victorbalan): enable cache in production -->
 	<!--
