--- a/app/elements/submission/challenge-finished.html
+++ b/app/elements/submission/challenge-finished.html
@@ -14,7 +14,7 @@
 		<paper-material elevation="1">
 			<div class="flex">
 				<h2>You have completed your task. Good job!</h2>
-				<p>Your results will be computed shortly.<p>
+				<p>Your results will be computed shortly.</p>
 				<content></content>
 			</div>
 		</paper-material>
