--- a/app/elements/nav-bar.html
+++ b/app/elements/nav-bar.html
@@ -29,7 +29,7 @@
 			</paper-tabs>
 		</template>
 		<template is="dom-if" if="{{!normalHeader}}">
-			<paper-tabs class="horizontal layout center" noink no-slide style="background-color: #95abc2">
+			<paper-tabs class="horizontal layout center" noink no-slide style="background-color: #7C7C7A">
 				<span class="center-center horizontal layout">{{header}}</span>
 				<div class="flex"></div>
 				<paper-fab class="self-center" icon="done" on-click="createChallenge"></paper-fab>
