--- a/app/elements/skill/skill-mini.html
+++ b/app/elements/skill/skill-mini.html
@@ -1,7 +1,7 @@
 <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 
-<dom-module id="task-skill">
+<dom-module id="skill-mini">
 	<style>
 		:host{
 			margin: 5px;
@@ -13,7 +13,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'task-skill',
+			is: 'skill-mini',
 			properties: {
 				skill: {
 					type: Object,
