--- a/app/elements/task/task-card.html
+++ b/app/elements/task/task-card.html
@@ -2,14 +2,14 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
-<link rel="import" href="/elements/skill/skill-list.html">
+<link rel="import" href="../skill/skill-list.html">
 
 <dom-module id="task-card">
 	<style>
 		:host {
 			width: 400px;
 			height: 300px;
-			margin: 5px;
+			margin: 0 10px 10px 0;
 		}
 
 		paper-material {
