--- a/app/elements/task/task-list.html
+++ b/app/elements/task/task-list.html
@@ -7,7 +7,9 @@
 		.margined {
 			margin: 10px;
 		}
-
+		.task-list {
+			padding: 10px;
+		}
 		paper-dialog {
 			background-color: white;
 		}
@@ -19,7 +21,7 @@
 			on-response="onResponse"
 			on-error="onError">
 		</iron-ajax>
-		<div class="horizontal layout wrap">
+		<div class="horizontal layout wrap task-list">
 			<template is="dom-repeat" items="{{tasks}}" as="task">
 				<task-card selected-tasks="{{selectedTasks}}"
 									 task="{{task}}"
