--- a/app/elements/skill/skill-polygon.html
+++ b/app/elements/skill/skill-polygon.html
@@ -22,8 +22,7 @@
 			is: 'skill-polygon',
 			properties: {
 				skills: {
-					type: Object,
-					observer: '_skillsSet'
+					type: Object
 				},
 				_options: {
 					type: Object,
