Detailed view for task  * removed description from task card  * created detailed view for a task

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -83,6 +83,16 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
+	page('/tasks/:taskKey', function(data) {
+		checkAuthorization();
+		checkIsCompany();
+		app.header = 'Tasks detail';
+		app.route = 'task-detail';
+		Polymer.Base.importHref('/elements/task/task-detail.html', function() {
+			app.$.taskDetail.getTask(data.params.taskKey);
+		});
+	});
+
 	page('/user/:userKey', function(context){
 		checkAuthorization();
 		checkIsCompany();
