--- a/app/elements/skill/skill-list.html
+++ b/app/elements/skill/skill-list.html
@@ -49,7 +49,7 @@
 			},
 			computeColor: function(value) {
 				value = Math.floor(255 * (1 - value));
-				return 'rgb(' + value + ', ' + value + ', ' + value + ');';
+				return 'rgb(' + value + ', ' + value + ', ' + value + ')';
 			},
 			computeValue: function(value) {
 				return (value * 100) + '%';
