--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,10 @@
 					<user-challenge-detail id="userChallengeDetail"></user-challenge-detail>
 				</section>
 
+				<section data-route="task-detail">
+					<task-detail id="taskDetail"></task-detail>
+				</section>
+
 				<section data-route="unauthorized">
 					<paper-material elevation="1">
 						<h2 class="paper-font-display2">You are not authorized to see this page.</h2>
