--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -29,7 +29,7 @@
 		paper-fab {
 		 	--paper-fab-background: #e5e5e5;
 			position: absolute;
-			top: 20px;
+			bottom: 20px;
 			right: 20px;
 			height: 30px;
 			width: 30px;
