--- a/app/elements/task/task-card.html
+++ b/app/elements/task/task-card.html
@@ -7,14 +7,15 @@
 <dom-module id="task-card">
 	<style>
 		:host {
-			width: 400px;
-			height: 300px;
+			width: 350px;
+			height: 250px;
 			margin: 0 10px 10px 0;
 		}
 
 		paper-material {
 			width: calc(98.66% - 32px);
 			height: calc(98.66% - 32px);
+			padding-right: 35px;
 			overflow: hidden;
 		}
 
@@ -23,17 +24,26 @@
 		}
 
 		.taskDuration iron-icon {
-			height: 16px;
-			width: 16px;
+			height: 20px;
+			width: 20px;
 		}
 
 		paper-fab {
+			width: 24px;
+			height: 24px;
+			--paper-fab-background: rgba(148, 167, 206, 0.5)
+		}
+
+		.task-selector {
 			position: absolute;
-			top: 20px;
-			right: 20px;
-			height: 30px;
-			width: 30px;
-			--paper-fab-background: #DFDFDF
+			top: 10px;
+			right: 10px;
+		}
+
+		.task-detail {
+			position: absolute;
+			top: 50px;
+			right: 10px;
 		}
 	</style>
 	<template>
@@ -43,17 +53,19 @@
 			class="card"
 			on-mouseover="onHovered"
 			on-mouseout="onUnhovered"
-		>
+	  	>
 			<h2>{{task.Name}}</h2>
 			<template is="dom-if" if="{{showButton}}">
-				<paper-fab mini icon="add" on-click="toggleSelectTask"></paper-fab>
+				<paper-fab class="task-selector" icon="add" on-click="_toggleSelectTask"></paper-fab>
+			</template>
+			<template is="dom-if" if="{{showZoomButton}}">
+				<paper-fab class="task-detail" icon="zoom-in" on-click="_viewTaskDetail"></paper-fab>
 			</template>
 			<div class="taskDuration">
 				<iron-icon icon="alarm"></iron-icon>
 				<span>{{duration}}</span>
 			</div>
 			<skill-list skill-weights="{{task.SkillWeights}}"></skill-list>
-			<div>{{task.Description}}</div>
 		</paper-material>
 	</template>
 	<script>
@@ -66,7 +78,7 @@
 				},
 				duration: {
 					type: String,
-					computed: 'computeDuration(task)'
+					computed: '_computeDuration(task)'
 				},
 				selectedTasks: {
 					type: Array,
@@ -82,6 +94,10 @@
 					notify: true,
 					observer: '_globalValueChanged'
 				},
+				showZoomButton: {
+					type: Boolean,
+					notify: true
+				},
 				noSelect: {
 					type:Boolean,
 					notify: true,
@@ -90,14 +106,13 @@
 			},
 			onHovered: function () {
 				this.showButton = !this.noSelect;
+				this.showZoomButton = true;
 			},
 			onUnhovered: function () {
+				this.showZoomButton = false;
 				this.showButton = this.showAllButtons || false;
 			},
-			computeDuration: function (task) {
-				return util.computeDuration(task.Duration);
-			},
-			toggleSelectTask: function () {
+			_toggleSelectTask: function () {
 				if (this.noSelect){
 					return;
 				}
@@ -123,8 +138,14 @@
 					this.$.task.style.border = '';
 				}
 			},
+			_computeDuration: function (task) {
+				return util.computeDuration(task.Duration);
+			},
 			_globalValueChanged: function (newValue) {
 				this.showButton = newValue;
+			},
+			_viewTaskDetail: function(){
+				page.redirect('/tasks/' + this.task.Key);
 			}
 		});
 	</script>
