--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -43,7 +43,7 @@
 	<template>
 		<paper-material id="challenge" elevation="2" class="card">
 			<h2>{{challenge.Name}}</h2>
-			<paper-fab mini icon="chevron-right" on-click="viewChallengeDetail"></paper-fab>
+			<a href="{{goTo}}"><paper-fab mini icon="chevron-right"></paper-fab></a>
 			<div class="duration">
 				<iron-icon icon="alarm"></iron-icon>
 				<span>{{duration}}</span>
@@ -65,11 +65,11 @@
 					computed: 'computeDuration(challenge)'
 				}
 			},
+			ready: function(){
+				this.goTo = '/challenges/' + this.challenge.Key;
+			},
 			computeDuration: function (challenge) {
 				return util.computeDuration(challenge.Duration);
-			},
-			viewChallengeDetail: function(){
-				page.redirect('/challenges/' + this.challenge.Key);
 			}
 		});
 	</script>
