--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
 					</paper-menu>
 				</paper-menu-button>
 				<div class="secnav bottom fit">
-					<nav-bar header="{{header}}" is-company="{{isCompany}}" is-coder="{{isCoder}}"></nav-bar>
+					<nav-bar header="{{header}}" is-company="{{isCompany}}" is-coder="{{isCoder}}" selected="{{selected}}"></nav-bar>
 				</div>
 			</paper-toolbar>
 		</template>
